--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
-    color: #333;
-    background-color: #a3e23c;
+    color: #0c0909;
+    background-color: #c9ab05;
 }
 
 nav {
@@ -16,8 +16,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #333;
-    color: #a3e23c;
+    background-color: #747474;
+    color: #c9ab05;
 
 }
 
@@ -35,7 +35,7 @@ nav li {
 }
 
 nav a{
-    color: #a3e23c;
+    color: #c9ab05;
     text-decoration: none;
 }
 
@@ -59,13 +59,14 @@ nav a:hover{
     padding: 10px;
     border: none;
     border-radius: 0px 5px 0px 5px;
-    background-color: #a3e23c;
+    background-color: #474744
+    ;
     color: #f1f1f1;
     cursor: pointer;
 }
 
 .search-form button[type= "submi"] {
-    background-color: #444;
+    background-color: #1a1414;
 }
 
 
@@ -92,6 +93,7 @@ nav a:hover{
         overflow: hidden;
         border-radius: 20px;
     }
+}
 
     .banner-item{
         position: relative;
@@ -119,7 +121,7 @@ nav a:hover{
         left: 0;
         width: 200px;
         height: 100%;
-        background-color: #af7f4a;
+        background-color: #f1f1f1;
         color: black;
         padding: 20px;
         display: flex;
@@ -183,7 +185,14 @@ nav a:hover{
         margin-bottom: 20px;
         box-sizing: 0 0 10px #0a0a0a;
         border-radius: 20px;
+     
     }
+    .section-1 img{
+        width: 550px;
+        height: 550px;
+        margin-left: 500px;
+    }
+
 
     .section-2{
         background-color: #f1f1f1;
@@ -196,5 +205,92 @@ nav a:hover{
     .section h2{
         margin-top: 0;
     }
-}
+
+    article {
+        background-color: #f1f1f1;
+        padding: 1em;
+        margin-bottom: 20px;
+        box-shadow: 0 0 10px #0a0a0a;
+        border-radius: 20px;
+        text-align: justify;
+    }
+
+    article h2{
+        margin-top: 0;
+      
+    
+    }
+
+    article img{
+        width: 550px;
+        height: 550px;
+        margin-left: 320px;
+        border: #444;
+        border-radius: 2px;
+        position: relative;
+    }
+
+    .cards {
+        display: flex;
+        justify-content: center;
+    }
+
+    .cards:hover {
+        -moz-transform: flex;
+        -webkit-transform:  wrap;
+        transform: scale(1.2);
+    }
+
+    .card-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:center ;
+    }
+
+    .card {
+        background-color: #f1f1f1;
+        margin: 20px;
+        padding: 20px;
+        border: 1px solid #0a0a0a;
+        border-radius: 10px;
+        box-shadow: 0 0 10px #0a0a0a;
+        width: calc(33.33% - 20px);
+        text-align: center;
+    }
+
+    .card img{
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
+    .card h3 {
+        margin-top: 0;
+    }
+
+    @media (max-width: 768px) {
+        .card{
+            width: calc(50% -20px);
+        }
+    }
+
+    @media (max-width: 480px) {
+        .card{
+            width: 100%;
+        }
+    }
+
+    footer {
+        background-color: #333;
+        color: #a3e23c;
+        text-align: center;
+        clear: both;
+        position: absolute;
+        width: 100%;
+        border-radius: 0px 0px 10px 10px;
+    }
+
+ 
+
 
